--- a/src/app/components/Footer.module.css
+++ b/src/app/components/Footer.module.css
@@ -1,40 +1,33 @@
 .footer {
-    color: #383838; /* White text */
-    padding: 20px 0; /* Padding */
-    text-align: center; /* Centered text */
-  }
-  
-  .container {
-    max-width: 1200px; /* Maximum width for larger screens */
-    margin: 0 auto; /* Centered margin */
-    padding: 0 20px; /* Horizontal padding */
-  }
-  
-  .text {
-    margin: 0; /* No margin */
-    color: #383838; /* White text */
-  }
-  
-  .nav {
-    margin-top: 10px; /* Spacing above navigation */
-  }
-  
-  .nav ul {
-    list-style: none; /* Remove bullet points */
-    padding: 0; /* No padding */
-  }
-  
-  .nav li {
-    display: inline; /* Inline items */
-    margin: 0 15px; /* Spacing between items */
-  }
-  
-  .nav a {
-    color: #252525; /* White text */
-    text-decoration: none; /* No underline */
-  }
-  
-  .nav a:hover {
-    text-decoration: underline; /* Underline on hover */
-  }
-  
+  background-color: #1a1a1a; /* Dark background */
+  color: #fff;
+  padding: 20px;
+  text-align: center; /* Center text */
+}
+
+.container {
+  margin-bottom: 15px; /* Add some space below the main links */
+}
+
+.additionalLinks {
+  margin-top: 15px; /* Space between the sections */
+}
+
+.additionalLinks h3 {
+  margin: 10px 0; /* Margin for the topics header */
+}
+
+.footerLinks {
+  list-style: none;
+  padding: 0;
+}
+
+.footerLinks li {
+  display: inline-block; /* Use inline-block for better spacing */
+  margin: 0 10px;
+}
+
+.footerLinks a {
+  color: #00ff00; /* Accent color */
+  text-decoration: none;
+}
